--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title:              Clean Blog
-email:              your-email@example.com
-description:        A Blog Theme by Start Bootstrap
-author:             Start Bootstrap
+title:              Research Blog
+email:              tddeshm@umich.edu
+description:        A blog about my research at the SPQR lab
+author:             Tanvi Deshmulh
 baseurl:            "/startbootstrap-clean-blog-jekyll"
 url:                "https://blackrockdigital.github.io"
 
