--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:              Research Blog
 email:              tddeshm@umich.edu
 description:        A blog about my research at the SPQR lab
-author:             Tanvi Deshmulh
+author:             Tanvi Deshmukh
 baseurl:            "/startbootstrap-clean-blog-jekyll"
 url:                "https://blackrockdigital.github.io"
 
