--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              Research Blog
 email:              tddeshm@umich.edu
-description:        A blog about my research at the SPQR lab
+description:        latest updates on my research journey
 author:             Tanvi Deshmukh
 baseurl:            "/startbootstrap-clean-blog-jekyll"
 url:                "https://blackrockdigital.github.io"
