--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:              Research Blog
 email:              tddeshm@umich.edu
-description:        latest updates on my research journey
+description:        updates and new findings
 author:             Tanvi Deshmukh
 baseurl:            "/startbootstrap-clean-blog-jekyll"
 url:                "https://blackrockdigital.github.io"
