--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ url:                "https://blackrockdigital.github.io"
 # Social Profiles
 twitter_username:   
 github_username:    tddeshm
-facebook_username:  tddolphins
+facebook_username:  tanvi.deshmukh.148
 linkedin_username:
 
 # Add your google-analytics ID here to activate google analytics
