--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title:              Research Blog
 email:              tddeshm@umich.edu
 description:        Tanvi Deshmukh
 author:             Tanvi Deshmukh
-baseurl:            "/startbootstrap-clean-blog-jekyll"
+baseurl:            "/research"
 url:                "https://blackrockdigital.github.io"
 
 # Social Profiles
