--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ email:              tddeshm@umich.edu
 description:        Tanvi Deshmukh
 author:             Tanvi Deshmukh
 baseurl:            "/research"
-url:                "https://tddeshm.github.io/research/"
+url:                "https://tddeshm.github.io"
 
 # Social Profiles
 twitter_username:   
