--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:              Research Blog
+title:              SPQR Research
 email:              tddeshm@umich.edu
 description:        Tanvi Deshmukh
 author:             Tanvi Deshmukh
